--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "next": "16.1.6",
+    "nuqs": "^2.8.8",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "zod": "^4.3.6"
