--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.2.1",
+    "@tanstack/react-query": "^5.59.0",
     "next": "16.1.6",
     "nuqs": "^2.8.8",
     "react": "19.2.3",
