--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "6.2.1",
+    "@prisma/client": "^6.2.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.59.0",
     "next": "16.1.6",
     "nuqs": "^2.8.8",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^1.7.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
