--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.59.0",
+    "framer-motion": "^11.18.2",
     "next": "16.1.6",
     "nuqs": "^2.8.8",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^2.15.4",
     "sonner": "^1.7.1",
     "zod": "^4.3.6"
   },
