chore: add husky pre-commit and pre-push hooks
- Install husky and lint-staged
- Add lint-staged config for formatting and linting
- Add pre-commit hook: formatting + type-check
- Add pre-push hook: full test suite + build

This ensures all code is properly formatted and tested before commits/pushes.

--- a/package.json
+++ b/package.json
@@ -16,10 +16,17 @@
     "type-check": "tsc --noEmit",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:seed": "tsx prisma/seed.ts",
+    "prepare": "husky"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
@@ -58,7 +65,9 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.0.0",
     "jsdom": "^26.1.0",
+    "lint-staged": "^15.0.0",
     "lucide-react": "^0.563.0",
     "prettier": "^3.8.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
