--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
         run: npm ci
 
       - name: Run tests with coverage
+        id: test
         run: npm run test:ci
 
       - name: Upload coverage report
@@ -81,66 +82,47 @@ jobs:
           retention-days: 30
 
       - name: Parse coverage report
+        if: ${{ !cancelled() && (steps.test.outcome == 'success' || steps.test.outcome == 'failure') }}
         id: coverage
         run: |
-          node << 'EOF'
-          const fs = require('fs');
-          const data = JSON.parse(fs.readFileSync('coverage/coverage-final.json', 'utf8'));
-
-          let totalLines = { total: 0, covered: 0 };
-          let totalStatements = { total: 0, covered: 0 };
-          let totalFunctions = { total: 0, covered: 0 };
-          let totalBranches = { total: 0, covered: 0 };
-
-          for (const file of Object.values(data)) {
-            if (file.lines) {
-              totalLines.total += file.lines.total;
-              totalLines.covered += file.lines.covered;
-            }
-            if (file.statements) {
-              totalStatements.total += file.statements.total;
-              totalStatements.covered += file.statements.covered;
-            }
-            if (file.functions) {
-              totalFunctions.total += file.functions.total;
-              totalFunctions.covered += file.functions.covered;
-            }
-            if (file.branches) {
-              totalBranches.total += file.branches.total;
-              totalBranches.covered += file.branches.covered;
-            }
-          }
-
-          const pct = (covered, total) => total === 0 ? 0 : ((covered / total) * 100).toFixed(2);
-
-          const lines = pct(totalLines.covered, totalLines.total);
-          const statements = pct(totalStatements.covered, totalStatements.total);
-          const functions = pct(totalFunctions.covered, totalFunctions.total);
-          const branches = pct(totalBranches.covered, totalBranches.total);
-
-          console.log(`Lines: ${lines}%`);
-          console.log(`Statements: ${statements}%`);
-          console.log(`Functions: ${functions}%`);
-          console.log(`Branches: ${branches}%`);
-
-          // Write to GITHUB_OUTPUT
-          const output = require('fs');
-          const outputFile = process.env.GITHUB_OUTPUT;
-          output.appendFileSync(outputFile, `lines=${lines}\n`);
-          output.appendFileSync(outputFile, `statements=${statements}\n`);
-          output.appendFileSync(outputFile, `functions=${functions}\n`);
-          output.appendFileSync(outputFile, `branches=${branches}\n`);
-          EOF
+          # Use coverage-summary.json which has a simpler structure
+          if [ -f coverage/coverage-summary.json ]; then
+            LINES=$(jq -r '.total.lines.pct' coverage/coverage-summary.json)
+            STATEMENTS=$(jq -r '.total.statements.pct' coverage/coverage-summary.json)
+            FUNCTIONS=$(jq -r '.total.functions.pct' coverage/coverage-summary.json)
+            BRANCHES=$(jq -r '.total.branches.pct' coverage/coverage-summary.json)
+            
+            echo "LINES=$LINES" >> "$GITHUB_OUTPUT"
+            echo "STATEMENTS=$STATEMENTS" >> "$GITHUB_OUTPUT"
+            echo "FUNCTIONS=$FUNCTIONS" >> "$GITHUB_OUTPUT"
+            echo "BRANCHES=$BRANCHES" >> "$GITHUB_OUTPUT"
+            
+            echo "Lines: $LINES%"
+            echo "Statements: $STATEMENTS%"
+            echo "Functions: $FUNCTIONS%"
+            echo "Branches: $BRANCHES%"
+          else
+            echo "Coverage summary not found"
+            echo "LINES=0" >> "$GITHUB_OUTPUT"
+            echo "STATEMENTS=0" >> "$GITHUB_OUTPUT"
+            echo "FUNCTIONS=0" >> "$GITHUB_OUTPUT"
+            echo "BRANCHES=0" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Post coverage comment
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && !cancelled()
         uses: actions/github-script@v7
+        env:
+          LINES: ${{ steps.coverage.outputs.LINES }}
+          STATEMENTS: ${{ steps.coverage.outputs.STATEMENTS }}
+          FUNCTIONS: ${{ steps.coverage.outputs.FUNCTIONS }}
+          BRANCHES: ${{ steps.coverage.outputs.BRANCHES }}
         with:
           script: |
-            const lines = '${{ steps.coverage.outputs.lines }}';
-            const statements = '${{ steps.coverage.outputs.statements }}';
-            const functions = '${{ steps.coverage.outputs.functions }}';
-            const branches = '${{ steps.coverage.outputs.branches }}';
+            const lines = process.env.LINES || '0';
+            const statements = process.env.STATEMENTS || '0';
+            const functions = process.env.FUNCTIONS || '0';
+            const branches = process.env.BRANCHES || '0';
 
             const body = `## 🧪 Test Coverage Report
 
